--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul class="botoesMenu">
                 <li><a href="html/projetos.html">Destaques</a></li>
                 <li><a href="html/contato.html">Contato</a></li>
-                <li><a href="html/sobre.html">Sobre</a></li>
+                <li><a href="html/sobre.html">Sobre Nós</a></li>
             </ul>
         </nav>
     </div>
