--- a/html/noticia2.html
+++ b/html/noticia2.html
@@ -5,24 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Sobre Nós</title>
+    <title>Notícia 2</title>
 </head>
 <body>
     <div class="menu">
         <a href="/index.html" class="logo">NEWS</a>
         <nav>
             <ul class="botoesMenu">
-                <li><a href="destaques.html">Destaques</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="sobre.html">Sobre Nós</a></li>
+                <li><a href="html/projetos.html">Destaques</a></li>
+                <li><a href="html/contato.html">Contato</a></li>
+                <li><a href="html/sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </div>
     <main class="principaisNoticias">
         <div class="noticia">
-            <h1>Sobre Nós</h1>
+            <h1>Notícia 2</h1>
             <img src="/imagens/copa.jpg" alt="">   
-        </div>    
+        </div> 
     </main>
     <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam odit optio neque ab ad doloremque ea numquam harum, fuga, rerum maiores illum sed doloribus ipsa culpa temporibus, soluta labore assumenda esse magnam ipsam. Porro incidunt culpa neque! Possimus repellendus non, sapiente cupiditate atque vel error eveniet, nisi nihil asperiores sunt minus aut quia ratione eius vero totam temporibus eaque tenetur iusto? Repudiandae sunt id harum maxime, quidem hic deleniti magni eos consequuntur. Adipisci at perspiciatis iusto eveniet. Maiores, autem temporibus. Id obcaecati nulla, pariatur nihil repellat quasi sit. Aut eius maxime sunt optio assumenda quam ab debitis inventore corporis incidunt.</p>
     <footer>
