--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <a href="index.html" class="logo">NEWS</a>
         <nav>
             <ul class="botoesMenu">
-                <li><a href="html/projetos.html">Destaques</a></li>
+                <li><a href="html/destaques.html">Destaques</a></li>
                 <li><a href="html/contato.html">Contato</a></li>
                 <li><a href="html/sobre.html">Sobre Nós</a></li>
             </ul>
@@ -27,11 +27,11 @@
     </div>
     <div class="noticia">
         <img src="imagens/copa.jpg" alt="">
-        <a href="/" class="tituloNoticia"><strong>Notícia 2</strong></a>
+        <a href="html/noticia2.html" class="tituloNoticia"><strong>Notícia 2</strong></a>
     </div>
     <div class="noticia">
         <img src="imagens/copa.jpg" alt="">
-        <a href="/" class="tituloNoticia"><strong>Notícia 3</strong></a>
+        <a href="html/noticia3.html" class="tituloNoticia"><strong>Notícia 3</strong></a>
     </div>     
     </main>
     <br>
