--- a/html/destaques.html
+++ b/html/destaques.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Sobre Nós</title>
+    <title>Destaques</title>
 </head>
 <body>
     <div class="menu">
@@ -20,7 +20,7 @@
     </div>
     <main class="principaisNoticias">
         <div class="noticia">
-            <h1>Sobre Nós</h1>
+            <h1>Destaques</h1>
             <img src="/imagens/copa.jpg" alt="">   
         </div>    
     </main>
