Correção noticia2 para destaques

--- a/html/noticia2.html
+++ b/html/noticia2.html
@@ -12,7 +12,7 @@
         <a href="/index.html" class="logo">NEWS</a>
         <nav>
             <ul class="botoesMenu">
-                <li><a href="html/projetos.html">Destaques</a></li>
+                <li><a href="html/destaques.html">Destaques</a></li>
                 <li><a href="html/contato.html">Contato</a></li>
                 <li><a href="html/sobre.html">Sobre</a></li>
             </ul>
