--- a/html/noticia1.html
+++ b/html/noticia1.html
@@ -12,9 +12,9 @@
         <a href="/index.html" class="logo">NEWS</a>
         <nav>
             <ul class="botoesMenu">
-                <li><a href="html/projetos.html">Destaques</a></li>
-                <li><a href="html/contato.html">Contato</a></li>
-                <li><a href="html/sobre.html">Sobre</a></li>
+                <li><a href="projetos.html">Destaques</a></li>
+                <li><a href="contato.html">Contato</a></li>
+                <li><a href="sobre.html">Sobre</a></li>
             </ul>
         </nav>
     </div>
