--- a/html/noticia3.html
+++ b/html/noticia3.html
@@ -12,7 +12,7 @@
         <a href="/index.html" class="logo">NEWS</a>
         <nav>
             <ul class="botoesMenu">
-                <li><a href="projetos.html">Destaques</a></li>
+                <li><a href="destaques.html">Destaques</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="sobre.html">Sobre</a></li>
             </ul>
