--- a/html/noticia3.html
+++ b/html/noticia3.html
@@ -14,7 +14,7 @@
             <ul class="botoesMenu">
                 <li><a href="destaques.html">Destaques</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="sobre.html">Sobre</a></li>
+                <li><a href="sobre.html">Sobre Nós</a></li>
             </ul>
         </nav>
     </div>
