--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <h1>PRINCIPAIS NOTÍCIAS</h1>
     <main class="principaisNoticias">
     <div class="noticia">
-        <img src="imagens/copa.jpg" alt="">
+        <a href="html/noticia1.html"><img src="imagens/copa.jpg" alt=""></a>
         <a href="html/noticia1.html" class="tituloNoticia"><strong>Notícia 1</strong></a>
     </div>
     <div class="noticia">
-        <img src="imagens/copa.jpg" alt="">
+        <a href="html/noticia2.html"><img src="imagens/copa.jpg" alt=""></a>
         <a href="html/noticia2.html" class="tituloNoticia"><strong>Notícia 2</strong></a>
     </div>
     <div class="noticia">
-        <img src="imagens/copa.jpg" alt="">
+        <a href="html/noticia3.html"><img src="imagens/copa.jpg" alt=""></a>
         <a href="html/noticia3.html" class="tituloNoticia"><strong>Notícia 3</strong></a>
     </div>     
     </main>
