--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="Icones/tag-ciano.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Icones/favicon.ico" type="image/x-icon">
     <title>NEWS</title>
 </head>
 <body>
@@ -38,4 +38,4 @@
     <div><p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt earum officia eaque, quisquam minima doloremque obcaecati mollitia commodi qui numquam, quo molestias, saepe blanditiis exercitationem aliquid eos necessitatibus. Facere iusto velit laudantium cum fugiat accusantium ducimus sed incidunt obcaecati quae laborum autem natus enim dignissimos culpa eligendi eos totam dolores reiciendis accusamus recusandae, cumque mollitia. Dicta sapiente iste, sunt, perspiciatis voluptas minus illo est numquam ducimus quasi saepe eaque quo nesciunt cupiditate, veniam nostrum. Quos, ducimus est aliquid saepe quod doloremque voluptatibus asperiores, quaerat, consectetur commodi deserunt. Soluta, laboriosam blanditiis nam cupiditate ducimus, eius dolor, molestiae perferendis beatae officiis repellendus?</p></div>
 </body>
 </html>
-<!--65,46      99,36       398,46      734,46-->
+<!--65,46      99,36       398,46      734,46 Leckerli One-->
