--- a/html/noticia3.html
+++ b/html/noticia3.html
@@ -5,17 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="shortcut icon" href="/Icones/favicon.ico" type="image/x-icon">
     <title>Notícia 3</title>
 </head>
 <body>
     <div class="menu">
         <a href="/index.html" class="logo">NEWS</a>
         <nav>
-            <ul class="botoesMenu">
-                <li><a href="destaques.html">Destaques</a></li>
-                <li><a href="contato.html">Contato</a></li>
-                <li><a href="sobre.html">Sobre Nós</a></li>
-            </ul>
+            <div class="botoesMenu">
+                <a href="destaques.html">
+                    <ul>
+                        <li>Destaques</li>
+                    </ul>
+                </a>
+                <a href="contato.html">
+                    <ul>
+                        <li>Contato</li>
+                    </ul>
+                </a>
+                <a href="sobre.html">
+                    <ul>
+                        <li>Sobre Nós</li>
+                    </ul>
+                </a>
+            </div>
         </nav>
     </div>
     <main class="principaisNoticias">
