--- a/index.html
+++ b/index.html
@@ -12,26 +12,38 @@
     <div class="menu">
         <a href="index.html" class="logo">NEWS</a>
         <nav>
-            <ul class="botoesMenu">
-                <li><a href="html/destaques.html">Destaques</a></li>
-                <li><a href="html/contato.html">Contato</a></li>
-                <li><a href="html/sobre.html">Sobre Nós</a></li>
-            </ul>
+            <div class="botoesMenu">
+                <a href="html/destaques.html">
+                    <ul>
+                        <li>Destaques</li>
+                    </ul>
+                </a>
+                <a href="html/contato.html">
+                    <ul>
+                        <li>Contato</li>
+                    </ul>
+                </a>
+                <a href="html/sobre.html">
+                    <ul>
+                        <li>Sobre Nós</li>
+                    </ul>
+                </a>
+            </div>
         </nav>
     </div>
     <h1>PRINCIPAIS NOTÍCIAS</h1>
     <main class="principaisNoticias">
     <div class="noticia">
         <a href="html/noticia1.html"><img src="imagens/copa.jpg" alt=""></a>
-        <a href="html/noticia1.html" class="tituloNoticia"><strong>Notícia 1</strong></a>
+        <a href="html/noticia1.html" class="tituloNoticiaPrincipal"><strong>Notícia 1</strong></a>
     </div>
     <div class="noticia">
-        <a href="html/noticia2.html"><img src="imagens/copa.jpg" alt=""></a>
-        <a href="html/noticia2.html" class="tituloNoticia"><strong>Notícia 2</strong></a>
+        <a href="html/noticia2.html"><img src="imagens/capa.webp" alt=""></a>
+        <a href="html/noticia2.html" class="tituloNoticiaPrincipal"><strong>Beethoven – Sonata ao Luar 3º Movimento</strong></a>
     </div>
     <div class="noticia">
         <a href="html/noticia3.html"><img src="imagens/copa.jpg" alt=""></a>
-        <a href="html/noticia3.html" class="tituloNoticia"><strong>Notícia 3</strong></a>
+        <a href="html/noticia3.html" class="tituloNoticiaPrincipal"><strong>Notícia 3</strong></a>
     </div>     
     </main>
     <br>
