--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>     
     </main>
     <br>
-    <div><p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt earum officia eaque, quisquam minima doloremque obcaecati mollitia commodi qui numquam, quo molestias, saepe blanditiis exercitationem aliquid eos necessitatibus. Facere iusto velit laudantium cum fugiat accusantium ducimus sed incidunt obcaecati quae laborum autem natus enim dignissimos culpa eligendi eos totam dolores reiciendis accusamus recusandae, cumque mollitia. Dicta sapiente iste, sunt, perspiciatis voluptas minus illo est numquam ducimus quasi saepe eaque quo nesciunt cupiditate, veniam nostrum. Quos, ducimus est aliquid saepe quod doloremque voluptatibus asperiores, quaerat, consectetur commodi deserunt. Soluta, laboriosam blanditiis nam cupiditate ducimus, eius dolor, molestiae perferendis beatae officiis repellendus?</p></div>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perferendis quae eaque error modi similique beatae autem fugit explicabo iste aspernatur omnis voluptate commodi id odit asperiores ex maxime, enim quod voluptas nulla veniam? Qui corporis soluta architecto accusantium, repudiandae neque doloribus facilis excepturi saepe dignissimos do</p>
 </body>
 </html>
 <!--65,46      99,36       398,46      734,46 Leckerli One-->
