--- a/html/noticia1.html
+++ b/html/noticia1.html
@@ -4,45 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="/Icones/favicon.ico" type="image/x-icon">
-    <title>Notícia 1</title>
+    <link rel="stylesheet" href="/css/noticia1.css">
+    <link rel="shortcut icon" href="/icones/favicon.ico" type="image/x-icon">
+    <title>Tchaikovsky - Swan Lake</title>
 </head>
 <body>
-    <div class="menu">
-        <a href="/index.html" class="logo">NEWS</a>
-        <nav>
-            <div class="botoesMenu">
-                <a href="destaques.html">
-                    <ul>
-                        <li>Destaques</li>
-                    </ul>
-                </a>
-                <a href="contato.html">
-                    <ul>
-                        <li>Contato</li>
-                    </ul>
-                </a>
-                <a href="sobre.html">
-                    <ul>
-                        <li>Sobre Nós</li>
-                    </ul>
-                </a>
-            </div>
+    <header class="header">
+        <a class="logo" href="/index.html">NEWS</a>
+        <nav class="espacoBotoesMenu">
+            <a class="botaoDestaques" href="destaques.html">Destaques</a>
+            <a class="botaoContato" href="contato.html">Contato</a>
+            <a class="botaoSobre" href="sobre.html">Sobre Nós</a>
         </nav>
-    </div>
-    <main class="principaisNoticias">
-        <div class="noticia">
-            <h1>Notícia 1</h1>
-            <img src="/imagens/capa.webp" alt="">
-        </div>    
+    </header>
+    <main>
+        <h1 class="tituloPagina">Tchaikovsky - Swan Lake</h1>
+        <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ex, officiis nesciunt consequuntur delectus maiores, dicta ratione modi odit, facilis in quis! In sint dolor tenetur nam sit. Officiis magnam exercitationem minima, sed magni fugiat pariatur, perferendis, earum perspiciatis et voluptatibus enim est aperiam tenetur. Optio totam ullam ratione ex enim rerum magnam quae corrupti nulla, consequuntur id similique eligendi perferendis. Libero esse quis officiis mollitia atque qui a in. Fugit necessitatibus minus odit impedit fugiat amet ipsa. Aut placeat temporibus dignissimos, quod ipsum exercitationem in dolorum iusto consequatur hic modi, sed, dolorem ipsa aspernatur! Reiciendis illo tempore architecto voluptatem eos, reprehenderit cupiditate dignissimos delectus. Commodi iure voluptate voluptatum rem omnis laborum at facere quos. Aliquid, dolor magni. Reprehenderit a quae molestiae sed! In iste ratione voluptas. Corrupti id distinctio reiciendis voluptatem similique voluptatibus, perferendis vitae totam? Cum, et explicabo quaerat, animi veniam voluptatum culpa, ipsa perspiciatis similique dicta voluptas. Ipsam provident incidunt odit. Voluptatum ullam maxime hic tenetur fugit dicta blanditiis ducimus, fugiat porro suscipit minus facere nulla laborum, et distinctio veritatis. Sed quis dolorum facilis sint, sit tempora quo dignissimos harum, dolorem consectetur ea officiis quod neque earum maxime quidem. Maiores iusto nisi dignissimos magni, fuga cupiditate officia tenetur, quam illo dicta doloribus odit architecto facilis fugiat voluptatem nihil animi, optio iure. Itaque cupiditate corrupti doloribus aliquid beatae facere sit. Adipisci nihil, aspernatur dolorem voluptates a repudiandae rerum accusamus modi debitis corporis quos fugit corrupti nostrum? Quibusdam minima quas, fuga praesentium quisquam suscipit omnis debitis cupiditate sapiente soluta ullam tempora quo asperiores voluptates mollitia vitae maiores. Delectus ullam dignissimos asperiores ex ipsam, exercitationem reprehenderit distinctio quo labore quas, debitis iusto. Eveniet cumque ad neque excepturi quam, reiciendis distinctio alias a perspiciatis, beatae sequi nisi culpa aspernatur ipsa saepe dignissimos quibusdam eum quasi totam, numquam necessitatibus ullam ipsum blanditiis.</p>
+        <div class="video">
+            <iframe width="676" height="380" src="https://www.youtube.com/embed/vAeRzW98IFw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
     </main>
-    <div class="video">
-        <iframe width="676" height="380" src="https://www.youtube.com/embed/XUzwdBQDzxw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
-    <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam odit optio neque ab ad doloremque ea numquam harum, fuga, rerum maiores illum sed doloribus ipsa culpa temporibus, soluta labore assumenda esse magnam ipsam. Porro incidunt culpa neque! Possimus repellendus non, sapiente cupiditate atque vel error eveniet, nisi nihil asperiores sunt minus aut quia ratione eius vero totam temporibus eaque tenetur iusto? Repudiandae sunt id harum maxime, quidem hic deleniti magni eos consequuntur. Adipisci at perspiciatis iusto eveniet. Maiores, autem temporibus. Id obcaecati nulla, pariatur nihil repellat quasi sit. Aut eius maxime sunt optio assumenda quam ab debitis inventore corporis incidunt.</p>
-    <footer>
-        <a href="/index.html" class="voltar">Voltar</a>
-    </footer>
 </body>
 </html>
