--- a/index.html
+++ b/index.html
@@ -5,49 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="shortcut icon" href="Icones/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/icones/favicon.ico" type="image/x-icon">
     <title>NEWS</title>
 </head>
 <body>
-    <div class="menu">
-        <a href="index.html" class="logo">NEWS</a>
-        <nav>
-            <div class="botoesMenu">
-                <a href="html/destaques.html">
-                    <ul>
-                        <li>Destaques</li>
-                    </ul>
-                </a>
-                <a href="html/contato.html">
-                    <ul>
-                        <li>Contato</li>
-                    </ul>
-                </a>
-                <a href="html/sobre.html">
-                    <ul>
-                        <li>Sobre Nós</li>
-                    </ul>
-                </a>
-            </div>
+    <header class="header">
+        <a class="logo" href="index.html">NEWS</a>
+        <nav class="espacoBotoesMenu">
+            <a class="botaoDestaques" href="html/destaques.html">Destaques</a>
+            <a class="botaoContato" href="html/contato.html">Contato</a>
+            <a class="botaoSobre" href="html/sobre.html">Sobre Nós</a>
         </nav>
-    </div>
-    <h1>PRINCIPAIS NOTÍCIAS</h1>
-    <main class="principaisNoticias">
-    <div class="noticia">
-        <a href="html/noticia1.html"><img src="imagens/copa.jpg" alt=""></a>
-        <a href="html/noticia1.html" class="tituloNoticiaPrincipal"><strong>Notícia 1</strong></a>
-    </div>
-    <div class="noticia">
-        <a href="html/noticia2.html"><img src="imagens/capa.webp" alt=""></a>
-        <a href="html/noticia2.html" class="tituloNoticiaPrincipal"><strong>Beethoven – Sonata ao Luar 3º Movimento</strong></a>
-    </div>
-    <div class="noticia">
-        <a href="html/noticia3.html"><img src="imagens/copa.jpg" alt=""></a>
-        <a href="html/noticia3.html" class="tituloNoticiaPrincipal"><strong>Notícia 3</strong></a>
-    </div>     
+    </header>
+    <main>
+        <div class="espacoTituloPagina">
+            <h1 class="tituloPagina">Principais Notícias</h1>
+        </div>
+        <div class="principaisNoticias">
+            <div class="noticia">
+                <a href="html/noticia1.html"><img class="imagemNoticia" src="imagens/tchaikovsky.webp" alt=""></a>
+                <h2><a class="tituloNoticia" href="/html/noticia1.html">Tchaikovsky - Swan Lake</a></h2>
+            </div>
+            <div class="noticia">
+                <a href="html/noticia2.html"><img class="imagemNoticia" src="imagens/beethoven.webp" alt=""></a>
+                <h2><a class="tituloNoticia" href="/html/noticia2.html">Beethoven – Sonata ao Luar 3º Movimento</a></h2>
+            </div>
+            <div class="noticia">
+                <a href="html/noticia3.html"><img class="imagemNoticia" src="imagens/debussy.webp" alt=""></a>
+                <h2><a class="tituloNoticia" href="/html/noticia3.html">Debussy - Clair de Lune</a></h2>
+            </div>
+        </div>        
+        <p class="texto">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum, accusantium? Sed distinctio, culpa placeat soluta nulla et esse asperiores temporibus dolore delectus tempore molestias accusantium maiores in eos doloribus consectetur eligendi dolorum hic odit. Dolorum adipisci sunt, quae totam veritatis corporis natus aliquam sequi nesciunt, quas quam provident. Mollitia fugit vitae ipsam repudiandae quasi, neque soluta itaque assumenda totam non, accusamus repellendus voluptatum, laudantium distinctio at laboriosam minus unde reprehenderit porro dolore! Delectus distinctio eaque veritatis. Vel, numquam nostrum? Cupiditate vitae incidunt nesciunt soluta ut est culpa quas. Error, consectetur iste voluptatibus voluptatem consequatur molestias deserunt optio asperiores iure amet alias laboriosam aperiam qui consequuntur, aspernatur neque corrupti aliquid laborum nisi. Inventore ratione ipsam iure accusamus quaerat, nisi vel, maiores, tempora aperiam unde alias sit debitis necessitatibus magnam sequi corporis porro commodi molestiae tenetur id veniam cum magni eos! Mollitia, placeat consectetur laborum quasi quaerat officiis ducimus temporibus aliquam nemo iusto laboriosam explicabo? Quis nam dignissimos voluptas totam voluptatum esse veritatis, libero necessitatibus iusto numquam velit dicta neque obcaecati! Enim sit necessitatibus, laborum at, labore nulla reprehenderit beatae quibusdam non perferendis optio consectetur! Iure cumque doloremque earum distinctio modi, quam libero alias quas illum cum! Deleniti et rem quos? Obcaecati, sit corrupti nemo nobis, nam, ea iure iusto rerum nostrum laborum aliquid doloribus tempora! Est, cum, reprehenderit minima voluptatibus similique sunt autem quibusdam ducimus consequatur vel, tempora saepe? Inventore ex, sunt odit vitae ratione culpa laudantium adipisci optio aliquid voluptates excepturi? Repudiandae, odio? Distinctio, explicabo! Odit non odio deserunt cupiditate repudiandae? Maxime voluptas dolorum iusto, possimus quod rerum qui dignissimos sed cumque, ex nostrum commodi hic? Excepturi, magni, quod, consequatur odit nihil facere rerum veritatis modi ipsa ad accusamus eius sunt! Ea nihil aliquam aut commodi voluptates tempora veniam, voluptate delectus incidunt repellendus omnis quia, qui similique expedita fuga optio.</p>
     </main>
-    <br>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis perferendis quae eaque error modi similique beatae autem fugit explicabo iste aspernatur omnis voluptate commodi id odit asperiores ex maxime, enim quod voluptas nulla veniam? Qui corporis soluta architecto accusantium, repudiandae neque doloribus facilis excepturi saepe dignissimos do</p>
 </body>
 </html>
-<!--65,46      99,36       398,46      734,46 Leckerli One-->
